--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pydantic = "^2.10.6"
 shortuuid = "^1.0.13"
+jinja2 = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
