--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "tangl"
-version = "0.1.0"
-description = ""
+version = "3.2.0"
+description = "The abstract narrative graph lib for interactive stories"
 authors = ["derek <derek.merck@gmail.com>"]
 readme = "README.md"
 
@@ -10,6 +10,11 @@ python = "^3.11"
 pydantic = "^2.10.6"
 shortuuid = "^1.0.13"
 jinja2 = "^3.1.5"
+dynaconf = "^3.2.7"
+pillow = "^11.1.0"
+pyyaml = "^6.0.2"
+semver = "^3.0.4"
+sphinx = "^8.1.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
