content fragments and info return types fix controller unit and integration tests revise bookmark list to be more generic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -152,7 +152,7 @@ exclude_also = [
 
     # Don't complain about abstract methods, they aren't run:
     "@(abc\\.)?abstractmethod",
-    "@BaseHandler\\.task_signature"
+    "@ApiEndpoint\\.register"
     ]
 
 [tool.coverage.html]
