--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ pytest-cov = "^4.1.0"     # coverage plugin for pytest
 sphinx = "^8.1.3"
 
 # lang
-#beautifulsoup4 = "^4.12.3"  # beautiful soup
+beautifulsoup4 = "^4.12.3"  # beautiful soup
 
 # graphing and visualization
 #networkx = "^3.4.2"
@@ -89,6 +89,8 @@ cmd2 = "^2.4.3"
 # db group
 redis = "^5.0.1"
 pymongo = "^4.6.0"
+pattern = "^0.0.1a0"
+lxml = "^5.3.1"
 
 [tool.pytest.ini_options]
 log_cli = true
