--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,12 @@
 name = "StoryTangl"
 version = "3.2.0"
 description = "The abstract narrative graph lib for interactive stories"
-authors = ["derek <derek.merck@gmail.com>"]
+authors = ["Derek Merck <derek@storytan.gl>"]
 readme = "README.md"
 packages = [
-    { include = "tangl" },
+    { include = "tangl", from = "engine/src" },
+    { include = "*", from = "apps/cli/src" },
+    { include = "*", from = "server" },
 #    { include = "sample_world", as = "tangle.worlds.sample_world" }
 ]
 
@@ -32,8 +34,8 @@ pyyaml = "^6.0.2"
 # text
 jinja2 = "^3.1.5"
 markdown-it-py = "^3.0.0"
-#humanize = "^4.10.0"
-#nameparser = "^1.1.3"
+nameparser = "^1.1.3"
+humanize = "^4.12.2"
 
 # api
 requests = "^2.32.3"
@@ -42,8 +44,8 @@ requests = "^2.32.3"
 pillow = "^11.1.0"
 
 # vector images
-#lxml = "^5.3.0"
-nameparser = "^1.1.3"
+lxml = "^5.3.1"
+
 
 [tool.poetry.group.server]
 optional = true
@@ -74,24 +76,22 @@ sphinx = "^8.1.3"
 
 # lang
 beautifulsoup4 = "^4.12.3"  # beautiful soup
+pattern = "^0.0.1a0"        # this is a very heavy dependency
 
 # graphing and visualization
 #networkx = "^3.4.2"
 #matplotlib = "^3.10.0"
 
-# cli group
+# rest
+fastapi = "^0.114.0"
+uvicorn = "^0.30.6"
+
+# cli
 cmd2 = "^2.4.3"
 
-# rest group
-#fastapi = "^0.114.0"
-#uvicorn = "^0.30.6"
-#cmd2-ext-test = "^2.0.0"
-
-# db group
+# dbs
 redis = "^5.0.1"
 pymongo = "^4.6.0"
-pattern = "^0.0.1a0"
-lxml = "^5.3.1"
 
 [tool.pytest.ini_options]
 log_cli = true
