--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "StoryTangl"
 version = "3.2.0"
 description = "The abstract narrative graph lib for interactive stories"
-authors = ["Derek Merck <derek@storytan.gl>"]
+authors = ["TangleDev <dev@storytan.gl>"]
 readme = "README.md"
 packages = [
     { include = "tangl", from = "engine/src" },
@@ -16,8 +16,8 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.urls]
-Documentation = "https://readthedocs.org/derekmerck/tangl/docs"
-Repository    = "https://github.com/derekmerck/tangl"
+Documentation = "https://readthedocs.org/story/tangl/docs"
+Repository    = "https://github.com/story/tangl"
 
 [tool.poetry.scripts]
 cli = "tangl.apps.cli.__main__:main"
@@ -92,6 +92,7 @@ cmd2 = "^2.4.3"
 # dbs
 redis = "^5.0.1"
 pymongo = "^4.6.0"
+webuiapi = "^0.9.17"
 
 [tool.pytest.ini_options]
 log_cli = true
