--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@ log_cli = true
 log_cli_level = "DEBUG"
 testpaths = [
     "engine/tests",               # base tests
-    "apps/*/tests"                # app tests
+#    "apps/*/tests"                # app tests
 #    "worlds/*/tests"       # sample world tests
 ]
 #pythonpath = [
