restoring media organized some legacy apps from scratch back into apps

--- a/engine/src/tangl/mechanics/mechanics_org.yaml
+++ b/engine/src/tangl/mechanics/mechanics_org.yaml
@@ -1,6 +1,7 @@
 # Mechanics Subpackage
 # --------------------
-deps: [story, core, media, narrative, utils]
+namespace: True
+deps: [story, core, media, discourse, utils]
 classes:
 
   # Complex Concepts
