--- a/engine/src/tangl/defaults.toml
+++ b/engine/src/tangl/defaults.toml
@@ -78,7 +78,7 @@ enabled = false                         # AI narrative content
 url = "http://localhost:11434"
 
 [content.apis.elevenlabs]
-enabled = false                         # AI voice over generator
+enabled = false                         # AI voice-over generator
 token = "<tok>"
 
 # Config for structured language services
