--- a/engine/src/tangl/utils/utils_org.yaml
+++ b/engine/src/tangl/utils/utils_org.yaml
@@ -1,4 +1,4 @@
 # Utils Subpackage
 # ----------------
 namespace: True
-deps: None  # No _internal_ dependencies on other subpackages
+deps: None  # No _internal_ dependencies on other tangl subpackages
