--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["TangleDev <dev@storytan.gl>"]
 readme = "README.md"
 packages = [
     { include = "tangl", from = "engine/src" },
-    { include = "*", from = "apps/cli/src" },
-    { include = "*", from = "server" },
+#    { include = "*", from = "apps/cli/src" },
+#    { include = "*", from = "server" },
 #    { include = "sample_world", as = "tangle.worlds.sample_world" }
 ]
 
@@ -46,6 +46,9 @@ pillow = "^11.1.0"
 # vector images
 lxml = "^5.3.1"
 deepdiff = "^8.4.2"
+pyrsistent = "^0.20.0"
+msgspec = "^0.19.0"
+zstandard = "^0.23.0"
 
 
 [tool.poetry.group.server]
