--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,15 +1,22 @@
 version: 2
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-24.04
   tools:
-    python: "3.10"
+    python: "3.12"
   jobs:
-      post_create_environment:
-        - pip install poetry
-        # Tell poetry to not use a virtual environment
-        - poetry config virtualenvs.create false
-      post_install:
-        # Install dependencies with 'docs' dependency group
-        # https://python-poetry.org/docs/managing-dependencies/#dependency-groups
-        - poetry install --with docs
+    post_create_environment:
+      - pip install poetry
+      - poetry config virtualenvs.create false
+    post_install:
+      - poetry install --with docs --without dev --without server
+
+sphinx:
+  configuration: docs/source/conf.py
+  fail_on_warning: true
+
+python:
+  install:
+    - method: pip
+      path: .
+    - requirements: docs/requirements.txt
