--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ serve = "tangl.apps.rest.__main__:main"
 docs = "sphinx.cmd.build:main"
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = ">=3.12,<4.0"
 pydantic = "^2.10.6"
 shortuuid = "^1.0.13"
 dynaconf = "^3.2.7"
@@ -76,9 +76,6 @@ pytest = "^8.3.4"
 pytest-cov = "^4.1.0"     # coverage plugin for pytest
 #httpx = "^0.26.0"         # for fastapi testing
 
-# docs
-sphinx = "^8.1.3"
-
 # lang
 beautifulsoup4 = "^4.12.3"  # beautiful soup
 pattern = "^0.0.1a0"        # this is a very heavy dependency
@@ -98,6 +95,16 @@ cmd2 = "^2.4.3"
 redis = "^5.0.1"
 pymongo = "^4.6.0"
 webuiapi = "^0.9.17"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^8.1.3"
+myst-parser = "^4.0.0"
+furo = "^2024.8.6"
+sphinx-markdown-builder = "^0.6.8"
+linkify-it-py = "^2.0.3"
 
 [tool.pytest.ini_options]
 log_cli = true
