--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "poetry"
+          cache: "pip"
+          cache-dependency-path: "poetry.lock"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
