--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,13 @@ jobs:
           cache: "pip"
           cache-dependency-path: "poetry.lock"
       - name: Install dependencies
+        env:
+          POETRY_VIRTUALENVS_CREATE: "true"
         run: |
           python -m pip install --upgrade pip
-          pip install poetry
+          pip install poetry uv
+          uv python install 3.13
+          poetry env use "$(uv python find 3.13)"
           poetry install --no-interaction --with dev
       - name: Run tests
         env:
