--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,12 @@ serve = "tangl.apps.rest.__main__:main"
 docs = "sphinx.cmd.build:main"
 
 [tool.poetry.dependencies]
-python = ">=3.12,<4.0"
+python = "^3.13"
 pydantic = "^2.10.6"
 shortuuid = "^1.0.13"
 dynaconf = "^3.2.7"
 pyyaml = "^6.0.2"
+wrapt = "^1.17.3"
 
 # text
 jinja2 = "^3.1.5"
@@ -45,12 +46,6 @@ pillow = "^11.1.0"
 
 # vector images
 lxml = "^5.3.1"
-deepdiff = "^8.4.2"
-pyrsistent = "^0.20.0"
-msgspec = "^0.19.0"
-zstandard = "^0.23.0"
-wrapt = "^1.17.3"
-
 
 [tool.poetry.group.server]
 optional = true
@@ -95,6 +90,13 @@ cmd2 = "^2.4.3"
 redis = "^5.0.1"
 pymongo = "^4.6.0"
 webuiapi = "^0.9.17"
+
+# docs - sphinx now included in testing
+sphinx = "^8.1.3"
+myst-parser = "^4.0.0"
+furo = "^2024.8.6"
+sphinx-markdown-builder = "^0.6.8"
+linkify-it-py = "^2.0.3"
 
 [tool.poetry.group.docs]
 optional = true
