--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,11 @@ name: CI
 on:
   push:
     branches: ["**"]
+    branches-ignore:
+      - "codex*"
+      - "codex/**"
   pull_request:
+    branches: ["**"]
 
 jobs:
   tests:
