--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: ["**"]
     branches-ignore:
+      # codex usually runs its own tests and only pushes a branch for a p/r
+      # so this keeps it from running ci redundantly
       - "codex*"
       - "codex/**"
   pull_request:
