restored basic script models in compiler

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,5 @@ jobs:
         env:
           PYTHONPATH: engine/src
         run: |
-          poetry run pytest engine/tests
+          poetry run pytest engine/tests -W ignore::DeprecationWarning
+#          poetry run pytest engine/tests
