changed ci to run on root and presumably discover/use pyproject test paths, including apps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,5 @@ jobs:
         env:
           PYTHONPATH: engine/src
         run: |
-          poetry run pytest engine/tests -W ignore::DeprecationWarning
+          poetry run pytest -W ignore::DeprecationWarning
 #          poetry run pytest engine/tests
