removed a lot of cruft from story until we need it renamed story domain (world singletons and manager domains) -> fabula renamed old resource types (actors, assets, etc) -> concepts renamed reference domain (block, scene, traversables) -> episode fixed or tossed several xfail tests, still sitting on many of them tho

--- a/engine/tests/resources/demo_script.yaml
+++ b/engine/tests/resources/demo_script.yaml
@@ -74,7 +74,7 @@ scenes:
 
 actors:
   guide:
-    obj_cls: tangl.story.fabula.actor.actor.Actor
+    obj_cls: tangl.story.concepts.actor.actor.Actor
     name: "The Guide"
     content: "A mysterious figure who appears at crossroads."
     tags: [npc, helpful]
