--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [
     { include = "tangl", from = "engine/src" },
     { include = "*", from = "apps/cli/src" },
-#    { include = "*", from = "apps/server/src" },
+    { include = "*", from = "apps/server/src" },
 #    { include = "sample_world", as = "tangle.worlds.sample_world" }
 ]
 
@@ -114,7 +114,7 @@ log_cli_level = "DEBUG"
 testpaths = [
     "engine/tests",               # base tests
     "apps/cli/tests",             # cli tests
-#    "apps/*/tests"                # app tests
+    "apps/*/tests"                # app tests
 #    "worlds/*/tests"       # sample world tests
 ]
 #pythonpath = [
