--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ toml = "^0.10.2"
 # testing
 pytest = "^8.3.4"
 pytest-cov = "^4.1.0"     # coverage plugin for pytest
-#httpx = "^0.26.0"         # for fastapi testing
+httpx = "^0.28.1"         # for fastapi testing
 
 # lang
 beautifulsoup4 = "^4.12.3"  # beautiful soup
