--- a/apps/web_next/package.json
+++ b/apps/web_next/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@pinia/testing": "^0.1.6",
+    "@types/node": "^20.14.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^5.1.4",
