--- a/apps/web_next/package.json
+++ b/apps/web_next/package.json
@@ -31,7 +31,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/ui": "^2.1.4",
     "@vue/test-utils": "^2.4.6",
-    "c8": "^10.1.2",
+    "@vitest/coverage-v8": "^2.1.4",
     "eslint": "^8.57.1",
     "eslint-plugin-vue": "^9.29.1",
     "happy-dom": "^15.7.4",
