--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "StoryTangl"
-version = "3.7.1"
+version = "3.7.2"
 description = "The abstract narrative graph lib for interactive stories"
 authors = ["TangleDev <dev@storytan.gl>"]
 readme = "README.md"
 packages = [
     { include = "tangl", from = "engine/src" },
-    { include = "*", from = "apps/cli/src" },
-    { include = "*", from = "apps/server/src" },
+    { include = "tangl", from = "apps/cli/src" },
+    { include = "tangl", from = "apps/server/src" },
 #    { include = "sample_world", as = "tangle.worlds.sample_world" }
 ]
 
