moved client tests to client root (setup files, tests still inline?) update eslint fix sass deprecation warnings again

--- a/apps/web_next/tsconfig.json
+++ b/apps/web_next/tsconfig.json
@@ -17,7 +17,8 @@
     /* Path mapping */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@tests/*": ["tests/*"]
     },
     
     /* Strict type-checking - THE IMPORTANT PART */
@@ -41,7 +42,8 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "**/*.test.ts"
+    "tests/**/*.test.ts",
+    "src/**/*.test.ts"
   ],
   "references": [
     { "path": "./tsconfig.node.json" }
