--- a/apps/web_next/package.json
+++ b/apps/web_next/package.json
@@ -11,7 +11,7 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint .",
     "format": "prettier --write src/",
     "generate-api": "openapi-typescript ../server/openapi.json -o src/types/api.d.ts"
   },
@@ -26,14 +26,14 @@
   "devDependencies": {
     "@pinia/testing": "^0.1.6",
     "@types/node": "^20.14.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/coverage-v8": "^2.1.4",
     "@vitest/ui": "^2.1.4",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.29.1",
+    "eslint": "^9.0.0",
+    "eslint-plugin-vue": "^9.29.0",
     "happy-dom": "^15.7.4",
     "msw": "^2.6.4",
     "openapi-typescript": "^7.4.3",
