--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,7 @@
     "eslint": "^9.0.0",
     "eslint-plugin-vue": "^9.29.0",
     "happy-dom": "^15.7.4",
-    "msw": "^2.6.4",
+    "msw": "^2.11.6",
     "openapi-typescript": "^7.4.3",
     "prettier": "^3.3.3",
     "sass-embedded": "^1.93.2",
@@ -44,5 +44,10 @@
     "vite-plugin-vuetify": "^2.0.4",
     "vitest": "^2.1.4",
     "vue-tsc": "^2.1.6"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
