xskip tests in demographics, remove xfail, add lfs to github ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true  # This pulls LFS files automatically
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
