--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,14 @@ jobs:
   python-tests:
     # pyproject includes tests for engine, apps/cli, apps/server, docs
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11"]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           lfs: true  # This pulls LFS files automatically
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.13
           cache: "pip"
           cache-dependency-path: "poetry.lock"
       - name: Install dependencies
@@ -32,9 +29,7 @@ jobs:
           POETRY_VIRTUALENVS_CREATE: "true"
         run: |
           python -m pip install --upgrade pip
-          pip install poetry uv
-          uv python install 3.13
-          poetry env use "$(uv python find 3.13)"
+          pip install poetry
           poetry install --no-interaction --with dev
           pip install -e .
       - name: Run tests
@@ -50,7 +45,7 @@ jobs:
       run:
         working-directory: apps/web
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -74,23 +69,21 @@ jobs:
   distribution-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
         with:
           lfs: true  # This pulls LFS files automatically
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.13
           cache: "pip"
           cache-dependency-path: "poetry.lock"
 
       - name: Build wheel
         run: |
           python -m pip install --upgrade pip
-          pip install poetry uv
-          uv python install 3.13
-          poetry env use "$(uv python find 3.13)"
+          pip install poetry
           poetry build
 
       - name: Install from wheel (not editable)
