--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,20 +3,14 @@ version: 2
 build:
   os: ubuntu-24.04
   tools:
-    python: "3.12"
+    python: "3.13"
   jobs:
     post_create_environment:
       - pip install poetry
       - poetry config virtualenvs.create false
     post_install:
-      - poetry install --with docs --without dev --without server
+      - poetry install --with docs --without dev
 
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: docs/src/conf.py
   fail_on_warning: true
-
-python:
-  install:
-    - method: pip
-      path: .
-    - requirements: docs/requirements.txt
