--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,20 +49,18 @@ pillow = "^11.1.0"
 # vector images
 lxml = "^5.3.1"
 
-[tool.poetry.group.server]
-optional = true
+# Optional dependencies (marked for extras)
+fastapi = {version = "^0.114.0", optional = true}
+uvicorn = {version = "^0.30.6", optional = true}
+redis = {version = "^5.0.1", optional = true}
+pymongo = {version = "^4.6.0", optional = true}
 
-[tool.poetry.group.server.dependencies]
-# rest
-fastapi = "^0.114.0"
-uvicorn = "^0.30.6"
+cmd2 = {version = "^2.4.3", optional = true}
 
-# cli
-cmd2 = "^2.4.3"
-
-# dbs
-redis = "^5.0.1"
-pymongo = "^4.6.0"
+[tool.poetry.extras]
+# These are what pip install storytangl[extras] uses
+server = ["fastapi", "uvicorn", "cmd2", "redis", "pymongo"]
+cli = ["cmd2"]
 
 [tool.poetry.group.dev.dependencies]
 # parsing
@@ -77,9 +75,7 @@ httpx = "^0.28.1"         # for fastapi testing
 beautifulsoup4 = "^4.12.3"  # beautiful soup
 pattern = "^0.0.1a0"        # this is a very heavy dependency
 
-# graphing and visualization
-#networkx = "^3.4.2"
-#matplotlib = "^3.10.0"
+# include all extras:
 
 # rest
 fastapi = "^0.114.0"
@@ -91,7 +87,6 @@ cmd2 = "^2.4.3"
 # dbs
 redis = "^5.0.1"
 pymongo = "^4.6.0"
-webuiapi = "^0.9.17"
 
 # docs - sphinx now included in testing
 sphinx = "^8.1.3"
@@ -100,15 +95,12 @@ furo = "^2024.8.6"
 sphinx-markdown-builder = "^0.6.8"
 linkify-it-py = "^2.0.3"
 
-[tool.poetry.group.docs]
-optional = true
+# graphing and visualization
+#networkx = "^3.4.2"
+#matplotlib = "^3.10.0"
 
-[tool.poetry.group.docs.dependencies]
-sphinx = "^8.1.3"
-myst-parser = "^4.0.0"
-furo = "^2024.8.6"
-sphinx-markdown-builder = "^0.6.8"
-linkify-it-py = "^2.0.3"
+# media
+webuiapi = "^0.9.17"  # sd auto1111 api
 
 [tool.pytest.ini_options]
 xfail_strict = true  # identify xpasses
