--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Install from wheel
         run: |
-          pip install dist/*.whl[server,cli]
+          pip install "dist/*.whl[server,cli]"
 
       - name: Test console scripts work
         run: |
