fixed planning to provision cursor and node ancestors (scenes, etc.) snapshot uses content_addressable planning applies in UPDATE, issues receipt in FINALIZE (but could be in update really)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,9 +114,11 @@ testpaths = [
     "apps/server/tests"           # rest server tests
 #    "worlds/*/tests"             # sample world tests
 ]
-#pythonpath = [
-#    "engine/src/tangl",
-#]
+pythonpath = [
+    "engine/src/",
+    "apps/cli/src/",
+    "apps/server/src"
+]
 norecursedirs = [
     "tmp",
     "old",
