moved extract-choices-fragment-json to "helpers_server" submodule in tests to prevent ns collisions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,7 +117,8 @@ testpaths = [
 pythonpath = [
     "engine/src/",
     "apps/cli/src/",
-    "apps/server/src"
+    "apps/server/src",
+    "apps/server/tests"
 ]
 norecursedirs = [
     "tmp",
