--- a/scratch/mechanics/look/wearable/wearables.yaml
+++ b/scratch/mechanics/look/wearable/wearables.yaml
@@ -38,6 +38,7 @@ dress:
 exclusive_dress:
   from: dress
   tags: [ exclusive ]
+  # exclusive tag means it never appears in a randomly generated collection
 
 undershirt:
   covers: [upper]
