added tangl-info cl_utils entrypoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ Repository    = "https://github.com/tangldev/storytangl"
 "tangl-docs" = "sphinx.cmd.build:main"
 
 [tool.poetry.dependencies]
-python = ">=3.12"
+python = ">=3.12,<4"
 pydantic = "^2.10.6"
 shortuuid = "^1.0.13"
 dynaconf = "^3.2.7"
