--- a/engine/tests/resources/worlds/media_mvp/story.yaml
+++ b/engine/tests/resources/worlds/media_mvp/story.yaml
@@ -1,12 +1,7 @@
-label: "Media MVP Story"
-metadata:
-  title: "Media MVP"
-  author: "StoryTangl"
-scenes:
-  intro:
-    blocks:
-      start:
-        content: "A simple starting block for loader tests."
-        media:
-          - name: test_image.svg
-            media_role: narrative_im
+entry: start
+blocks:
+  start:
+    content: "A simple starting block for loader tests."
+    media:
+      - name: test_image.svg
+        media_role: narrative_im
