Add loader convention coverage and fix domain inference

--- a/engine/tests/resources/worlds/media_e2e/world.yaml
+++ b/engine/tests/resources/worlds/media_e2e/world.yaml
@@ -1,10 +1,6 @@
-uid: media_e2e
-label: "Media E2E Test"
-version: "1.0"
-
+label: media_e2e
 scripts: story.yaml
 media_dir: media
-
 metadata:
   title: "Media E2E Test"
   author: "Test Suite"
