--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,5 +17,5 @@ sphinx:
 
 python:
   install:
-    - extra_requirements:
-      - sphinx = ^8.1.3,<9
+    - path: .
+      extra_requirements: [docs]
