--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,10 +58,17 @@ pymongo = {version = "^4.6.0", optional = true}
 
 cmd2 = {version = "^2.4.3", optional = true}
 
+sphinx = {version="^8.1.3,<9", optional = true}
+myst-parser = {version="^4.0.0", optional = true}
+furo = {version="^2024.8.6", optional = true}
+sphinx-markdown-builder = {version="^0.6.8", optional=true}
+linkify-it-py = {version="^2.0.3", optional=true}
+
 [tool.poetry.extras]
 # These are what pip install storytangl[extras] uses
 server = ["fastapi", "uvicorn", "cmd2", "redis", "pymongo"]
 cli = ["cmd2"]
+docs = ["sphinx", "myst-parser", "furo", "sphinx-markdown-builder", "linkify-it-py"]
 
 [tool.poetry.group.dev.dependencies]
 # parsing
