docstrings and other minor cleanups refactored media-record to use content-addressable mixin instead of duplicating content hash stuff fixed json serializer to serialize bytes as hex in general; should be careful about long-form data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,7 @@ testpaths = [
 ]
 pythonpath = [
     "engine/src/",
+    "engine/tests/",
     "apps/cli/src/",
     "apps/server/src",
     "apps/server/tests"
